--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ TA-N <input type="range" value="0.5" min="0.05" max="2.5" step="0.01"/><span cla
 (And the optimal range may be very narrow, spanning only a few tenths of a pH unit.)</p><p>
 Trial-and-error, as in this demo, is an inefficient management approach: you smack down one problem...and another problem pops up somewhere else -- kind of like 
 playing “Water Quality Whack-a-Mole”.</p><div style="text-align:center;margin-top:20px" idyll="[object Object]"></div></div><p>
-So, the goal is to identify the conditions under which water quality is optimal for your species and then adjust the culture environment accordingly. </p><p>
+So, the goal is to identify the conditions under which water quality is optimal for your species, and then adjust the culture environment accordingly. </p><p>
 The Water Quality Map is designed to simplify that key task, alleviating the time and mistakes of a trial-and-error approach.</p><div style="display:inline-block"> <h4 style="display:inline;margin-right:30px;margin-bottom:0px;padding-bottom:0px" id="refs"> </h4> <span style="font-size:0.85rem" idyll="[object Object]"></span> </div><div id="references"><h1>References</h1><ol><li><a href="https://idl.cs.washington.edu/files/2018-Idyll-UIST.pdf" target="_blank">Idyll: A Markup Language for Authoring and Publishing Interactive Articles on the Web</a>, <!-- -->Matthew Conlen and Jeffrey Heer<!-- -->.<em> Seattle, WA.</em> 2018.</li></ol></div></div></div></div></div>
     <script src="static/idyll_index.js"></script>
   </body>
